kubernetes/home/node-red/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  selector:
    matchLabels:
      app: node-red
  replicas: 1
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red:4.0.3-22
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /usr/src/node-red/node_modules/
          name: shared-modules
        - mountPath: /data/settings.js
          name: files
          subPath: settings.js
        - mountPath: /data/flows-original.json
          name: files
          subPath: flows.json
        - mountPath: /data/flows_cred.json
          name: secret
          subPath: flows_cred.json
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /data/flows-original.json /data/flows.json"]
      volumes:
      - name: shared-modules
        emptyDir: {}
      - name: files
        configMap:
          name: node-files
      - name: packages
        configMap:
          name: node-red-packages
      - name: secret
        secret:
          secretName: node-red-ha-token
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  selector:
    app: node-red
  ports:
  - name: http
    port: 1880
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
spec:
  hostnames:
  - node-red.bgalhardo.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: local
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: node-red
      port: 1880
